single-vpc/aws_network_acl.tf
resource "aws_network_acl" "this" {
  vpc_id     = aws_vpc.this.id
  subnet_ids = module.subnet.id

  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 443
    to_port    = 443
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 80
    to_port    = 80
  }

  tags {
    terraform         = true
    creation_occasion = var.creation_occasion
  }
}
